Cleaned up WG protection.

--- a/locale/locale.yml
+++ b/locale/locale.yml
@@ -95,17 +95,21 @@ sethome:
 targetInPVPArea: "Target is in a no-PVP area!"
 warps: 
   deactivate: "Deactivating old sign!"
+  entry: "Now entering [player]'s protected area"
   errorDoesNotExist: "That warp doesn't exist!"
   errorDuplicate: "Sorry! There is a sign already in that location!"
   errorNoPerm: "You do not have permission to place Welcome Signs yet!"
-  errorNoPlace: "You must be on your island to place a Welcome Sign!"
+  errorNoPlace: "You cannot place a sign here because it will overlap another player's claim."
   errorNoRemove: "You can only remove your own Welcome Sign!"
   errorNoWarpsYet: "There are no warps available yet!"
   errorNotReadyYet: "That warp is not ready yet. Try again later."
   errorNotSafe: "That warp is not safe right now. Try again later."
+  exit: "Now leaving [player]'s protected area"
   next: "Next"
   playerWarped: "[name] &2warped to your sign!"
   previous: "Previous"
+  protectionenabled: "Protection enabled: [number] x [number] around sign"
+  protectionlost: "Protection lost"
   removed: "Welcome sign removed!"
   signRemoved: "Your welcome sign was removed!"
   success: "Welcome sign placed successfully!"
